fix: 将visible-links改为flex布局修复语言切换按钮位置

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -204,11 +204,13 @@
   }
 
   .visible-links {
-    display: table;
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
 
     li {
-      display: table-cell;
-      vertical-align: middle;
+      list-style: none;
+      white-space: nowrap;
 
       &:first-child {
         font-weight: bold;
